package model.global;

public enum GlobalDirection {

    UP,
    DOWN,
    LEFT,
    RIGHT,
    IDLE
}
